fix: responsive gaps

--- a/src/responsive.scss
+++ b/src/responsive.scss
@@ -28,14 +28,23 @@
   // Generate gutters for responsive columns
   @each $name, $value in $paddings {
     div[class^="responsive"] {
-      &.column-gap\:#{$name} > div {
-        margin-left: $value;
-        margin-right: $value;
-      }
 
-      &.row-gap\:#{$name} > div {
-        margin-top: $value;
-        margin-bottom: $value;
+      &.column-gap\:#{$name} {        
+        margin-left: -$value;
+        margin-right: -$value;
+        & > div {
+          margin-left: $value;
+          margin-right: $value;
+        }
+    }
+
+      &.row-gap\:#{$name} {
+        margin-top: -$value;
+        margin-bottom: -$value;
+        & > div {
+          margin-top: $value;
+          margin-bottom: $value;
+        }
       }
     }
   }
